fix typos in structure/layout

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4   88    1    1    2  27.13      8    13      66     168"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,15 +148,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Record your initial observations on the histogram here "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -180,7 +171,7 @@
     }
    ],
    "source": [
-    "v\n",
+    "height = df.height.values.tolist()\n",
     "print (len(height))\n",
     "print (height)"
    ]
@@ -259,7 +250,7 @@
     "\n",
     "    mean = None\n",
     "    \n",
-    "    return round(mean,2)\n",
+    "    return mean\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
     "test2 = [4, 2, 3, 1]\n",
@@ -304,10 +295,10 @@
    "source": [
     "So we have our mean length, 69.5, and this confirms our observations from the histogram. But we also some outliers in out data above and we know outliers effect the mean calculation by pulling mean value in their direction.  So let's remove these outliers and create a new list to see if our mean shifts of stays. We'll use a threshold of 80 inches, i.e. filter out any values greater than 80. \n",
     " \n",
-    "Perform following tasks:\n",
+    "Perform the following tasks:\n",
     "\n",
     "* Create a function `filter_list()` that inputs a list \n",
-    "* Perform a for loop to iteratively check and aappend values to a new list if < 80. \n",
+    "* Perform a for loop to iteratively check and append values to a new list if < 80. \n",
     "* Return the new list "
    ]
   },
@@ -332,7 +323,7 @@
     "    \n",
     "    listB = []\n",
     "    \n",
-    "    # Perform filtering here  in a for loop\n",
+    "    # Perform filtering here in a for loop\n",
     "    \n",
     "    return listB\n",
     "\n",
@@ -358,6 +349,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "# Plot a histogram for the filtered list - use 8 bins as before"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -374,16 +375,6 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# Plot a histogram for the filtered list - use 8 bins as before\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Expected output"
    ]
@@ -874,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
